--- a/templates/accounts/select-account.html
+++ b/templates/accounts/select-account.html
@@ -47,7 +47,7 @@
                 </div>
                 <p><strong>Who?</strong> An individual who carries out academic or scientific research independently or in an institution </p>
                 <p><strong>What?</strong> Create projects and generate Notices</p>
-                <a href="{% url 'connect-researcher' %}" class="primary-btn white-btn-select">Create</a>
+                <a href="{% url 'prep-researcher' %}" class="primary-btn white-btn-select">Create</a>
             </div>
 
         </div>
