--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -1,4 +1,16 @@
 {% extends 'register-base.html' %} {% block title %} Create Institution {% endblock %}{% load static %} {% block card %}
+<script src="https://www.google.com/recaptcha/api.js?render=6LchglYpAAAAAABKj7CtiTlfvmPVN5eU2DzTVl2U"></script>
+<script>
+    grecaptcha.ready(function () {
+      grecaptcha
+        .execute("6LchglYpAAAAAABKj7CtiTlfvmPVN5eU2DzTVl2U", {
+          action: "subscription",
+        })
+        .then(function (token) {
+          document.getElementById("g-recaptcha-response").value = token;
+        });
+    });
+</script>
 
 <div class="flex-this column account-registration-container">
     <div class="flex-this space-between">
@@ -16,7 +28,19 @@
     <form action="" method="POST" class="flex-this column w-100">
         {% csrf_token %}
 
-        <div class="margin-top-16 w-100">
+        <div class="w-100 flex-this margin-top-16">
+            <div class="w-50 margin-right-1">
+                <label class="pad-top-1-5" >First Name</label><br>
+                {{ user_form.first_name }}
+            </div>
+
+            <div class="w-50">
+                <label>Last Name</label><br>
+                {{ user_form.last_name }}
+            </div>
+        </div>
+
+        <div class="margin-top-8 w-100">
             <label for="institution_name">Institution Name<span class="orange-text required-label" title="">*</span></label>
             {{ noror_form.institution_name }}
         </div>
@@ -74,12 +98,12 @@
 
         <div class="w-100 flex-this">
             <div class="w-50 margin-right-1">
-                <label class="pad-top-1-5" for="city_town">Contact name<span class="orange-text required-label" title="">*</span></label><br>
+                <label class="pad-top-1-5">Contact name<span class="orange-text required-label" title="">*</span></label><br>
                 {{ noror_form.contact_name }}
             </div>
 
             <div class="w-50">
-                <label for="state_province_region">Contact Email<span class="orange-text required-label" title="">*</span></label><br>
+                <label>Contact Email<span class="orange-text required-label" title="">*</span></label><br>
                 {{ noror_form.contact_email }}
             </div>
         </div>
@@ -101,6 +125,11 @@
                 {% include 'partials/_alerts.html' %}
             </div>
             
+            <input
+            type="hidden"
+            name="g-recaptcha-response"
+            id="g-recaptcha-response"
+            />
             <div class="margin-top-8">
                 <button class="primary-btn action-btn margin-top-2" name="create-institution-btn">Continue <i class="fa fa-arrow-right"></i></button>
             </div>
