--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="dashcard">
   <div class="flex-this">
-    <div class="researcher-img-container {% if researcher.is_submitted == False %} disable {% endif %}">
+    <div class="researcher-img-container">
       <img
         loading="lazy"
         class="profile-img"
@@ -9,7 +9,7 @@
         alt="{{ researcher.researcher_name }} image"
       />
     </div>
-    <div class="{% if  researcher.is_submitted %} flex-this column dashcard-text-container {% else %} flex-this column dashcard-text-container  disable {% endif %}">
+    <div class="flex-this column dashcard-text-container">
       <div class="flex-this column dashcard-text-container">
         <div class="subscribed-icon-wrapper">
           <h3 class="dashcard-h3 darkteal-text">
@@ -51,7 +51,6 @@
                 {% endif %}
             </div>
         {% endif %}
-        {% if researcher.is_submitted %}      
         <div>
           {% if '/dashboard/' in request.path %} {% if researcher.get_projects %}
               <a
@@ -80,16 +79,6 @@
                 ></a>
               </div>
           </div>
-        {% endif %}
-        {% else %}
-                {% if '/dashboard/' in request.path %}
-                    <div>
-                        <a 
-                            class="primary-btn action-btn"
-                            href="{% url 'confirm-subscription-researcher' researcher.id  %}"
-                        >Complete Subscription Inquiry</a>
-                    </div>
-                {% endif %}
         {% endif %}
       </div>
 
