Addressed field label rendering feedback

--- a/templates/accounts/subscription-inquiry.html
+++ b/templates/accounts/subscription-inquiry.html
@@ -76,7 +76,7 @@
           </div>
           <div class="flex-this w-100 space-between margin-top-2">
             <div id="ror-input-container" class="w-100">
-              <label for="id_organization_name">Affiliation's / Organization's <span class="orange-text font-size-12" >(Optional)</span></label>
+              <label for="id_organization_name">Affiliation(s) or Organization(s) <span class="orange-text font-size-12" >(Optional)</span></label>
               <div class="tooltip"><strong>i</strong>
                 <span class="tooltiptext">An affiliation's or organization's name might be an archive, library, museum, historical society, gallery, data repository, university, or media production company.</span>
             </div>
