--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1706,3 +1706,28 @@ i[data-tooltip]:hover:after {
     border-radius: 4px;
     padding: 16px;
 }
+
+.required-label {
+    position: relative;
+    cursor: pointer;
+}
+
+.required-label[title]::after {
+    content: "Required";
+    position: absolute;
+    bottom: 100%;
+    left: 89%;
+    transform: translateX(-50%);
+    padding: 5px 10px;
+    border-radius: 5px;
+    visibility: hidden;
+    transition: opacity 0.3s;
+    z-index: 1000;
+    pointer-events: none;
+}
+
+.required-label[title]:hover::after {
+    visibility: visible;
+    background-color: #EF6C00;
+    color: #fff;
+}
