--- a/templates/accounts/subscription-inquiry.html
+++ b/templates/accounts/subscription-inquiry.html
@@ -32,7 +32,7 @@
         <div class="flex-this column w-100">
           <div class="flex-this w-100 space-between">
             <div class="w-50 margin-right-1">
-              <label for="id_first_name">First name</label>
+              <label for="id_first_name">First name<span class="orange-text required-label" title="">*</span></label>
               {{ form.first_name }}{% if form.first_name.errors %}
               <div class="msg-red w-50">
                 <small>{{ form.first_name.errors.as_text }}</small>
@@ -52,7 +52,7 @@
 
           <div class="flex-this w-100 space-between margin-top-2">
             <div class="w-100 ">
-              <label for="id_email">Email</label>
+              <label for="id_email">Email<span class="orange-text required-label" title="">*</span></label>
               {{ form.email }}{% if form.email.errors %}
               <div class="msg-red w-100">
                 <small>{{ form.email.errors.as_text }}</small>
@@ -63,17 +63,8 @@
           </div>
 
           <div class="flex-this w-100 space-between margin-top-2">
-            <div class="w-50 margin-right-1">
-              <label for="id_account_type">Account Type</label>
-              {{ form.account_type }}
-              {% if form.account_type.errors %}
-              <div class="msg-red w-50">
-                <small>{{ form.account_type.errors.as_text }}</small>
-              </div>
-              {% endif %}
-            </div>
-            <div class="w-50 margin-left-1">
-              <label for="id_inquiry_type">Inquiry Type</label>
+            <div class="w-100 ">
+              <label for="id_inquiry_type">Inquiry Type<span class="orange-text required-label" title="">*</span></label>
               {{ form.inquiry_type }}
               {% if form.inquiry_type.errors %}
               <div class="msg-red w-50">
@@ -85,7 +76,10 @@
           </div>
           <div class="flex-this w-100 space-between margin-top-2">
             <div id="ror-input-container" class="w-100">
-              <label for="id_organization_name">Organization Name</label>
+              <label for="id_organization_name">Affiliation(s) or Organization(s) <span class="orange-text font-size-12" >(Optional)</span></label>
+              <div class="tooltip"><strong>i</strong>
+                <span class="tooltiptext">An affiliation's or organization's name might be an archive, library, museum, historical society, gallery, data repository, university, or media production company.</span>
+            </div>
               {{ form.organization_name }}
               <div id="suggestionsContainer"></div>
             </div>
