--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -4,7 +4,7 @@
     <div><p class="bold no-top-margin">{{ project.project_privacy }} Project</p></div>
 
     <div class="flex-this margin-top-16">
-        <div><a onclick="copyToClipboard('uniqueIDToCopy')" class="primary-btn green-btn margin-top-2 copied-display"><i class="fa fa-copy"></i></a></div>
+        <div><a onclick="copyToClipboard('uniqueIDToCopy')" class="primary-btn green-btn margin-top-2 copied-display"><i class="fa fa-copy round-btn"></i></a></div>
         <div class="margin-left-1"><p class="no-top-margin"><span class="bold">Local Contexts Unique Project ID</span> <br><span id="uniqueIDToCopy">{{ project.unique_id }}</span><br></p></div>
     </div>
 
