--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -19,6 +19,20 @@
         <div class="margin-top-16 w-100">
             <label for="institution_name">Institution Name</label>
             {{ noror_form.institution_name }}
+            <div class="w-100 margin-top-1">
+                {% if noror_form.errors %}
+                    {% for field_name, errors in noror_form.errors.items %}
+                        <div class="red-text">
+                            <strong>{{ field_name }}</strong>:
+                            {% for error in errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+
+                {% include 'partials/_alerts.html' %}
+            </div>
         </div>
 
         <div>
@@ -62,22 +76,7 @@
             <small id="charCount" class="block text-align-right">200/200</small>
         </div>
 
-        <div class="flex-this space-between">
-            <div>
-
-                {% if noror_form.errors %}
-                    {% for field_name, errors in noror_form.errors.items %}
-                        <div class="red-text">
-                            <strong>{{ field_name }}</strong>:
-                            {% for error in errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% endfor %}
-                {% endif %}
-
-                {% include 'partials/_alerts.html' %}
-            </div>
+        <div class="flex-this flex-end">
             
             <div class="margin-top-8">
                 <button class="primary-btn action-btn margin-top-2" name="create-institution-btn">Continue <i class="fa fa-arrow-right"></i></button>
