feat: fixed typo

--- a/templates/accounts/deactivate.html
+++ b/templates/accounts/deactivate.html
@@ -13,7 +13,7 @@
                     Please email us at
                     <a href="mailto:support@localcontexts.org">support@localcontexts.org</a>
                     for deactivation assistance.
-                {% elif user_role == 'is_admin' %}
+                {% elif user_role == 'is_member' %}
                     It looks like you're a member of an account. Before you can deactivate your user profile,
                     you need to leave each account (see Accounts in this settings menu).
                 {% else %}
