--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -239,6 +239,7 @@ input:focus {
 .no-bottom-margin { margin-bottom: 0; }
 .no-margin { margin: 0 !important; }
 .margin-top-8 { margin-top: 8px; }
+.margin-top-10 { margin-top: 10px; }
 .margin-bottom-8 { margin-bottom: 8px; }
 .margin-left-8 { margin-left: 8px; }
 .margin-right-8 { margin-right: 8px; }
