--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -2,27 +2,29 @@
 
     <div class="w-90">
         {% if community %}
-            <h2 class="no-top-margin">Preparation Step</h2>
+            <h2 class="no-top-margin">Creating a Community Account</h2>
             <p class="bold">
-                Things to know before you start creating a new account.
+                Please note the following before creating a community account:
             </p>
             <p>
-                <strong>01 As the creator of this new account, you will become the account contact by default.</strong> You will be the main administrator and the point of contact for the account. 
-                If you would like to change the account contact or your role after creating your account, please contact us.
-
+                <strong>01 A community account is for a sovereign collective Indigenous or local community group who will use Labels. </strong> 
+                This includes a Nation, First Nation, Iwi, Band, Tribe, Confederation, Land Council, Native Hawaiian Organization, and Alaskan Native Village Corporation. 
+                A community account can customize and apply Traditional Knowledge and Biocultural Labels on behalf of their community.
                 <br><br>   
 
-                <strong>02 In order to confirm your account, we will ask for the contact information for a community representative or a letter outlining their approval. </strong>
-                We want to confirm that the account you are creating has the permission from an appropriate representative of your community to be active on the platform. 
-                Since this account will represent your community on the Hub, your community representative should be someone 
-                who has the responsibility for approving community initiatives.
+                <strong>02 As the creator of this new account, you will become the account contact by default.  </strong>
+                You will be the main administrator and the point of contact for the account. If you would like to change the account 
+                contact or your role after creating your account, please contact us.
                 <br><br> 
 
-                We will ask for the representative’s name and email, or you may upload a signed letter outlining their approval to join the Hub. The contact information or letter are needed in order to create a new account. 
+                <strong>03 In order to confirm your account, we will ask for the contact information for a community representative or a letter outlining their approval.</strong>
+                Since this account will represent your community on the Hub, we ask to confirm the account with a community representative who has the responsibility 
+                for approving community initiatives.
+                <br><br> 
 
-                <br><br>
-                Until the account is confirmed, certain features will not be available. This confirmation must be completed within 90 days, or the account will be suspended. If you have any questions, please contact us. 
-                If you are trying out the Hub, please join our <a class="default-a" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">sandbox site <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>. 
+                We will ask for the representative’s name and email, or you may upload a signed letter outlining their approval to join the Hub. The contact information or 
+                letter is needed in order to create a new account. Until the account is confirmed, certain features will not be available. This confirmation must be completed 
+                within 90 days, or the incomplete account will be removed.
             </p>   
         {% endif %}     
         
