--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -46,6 +46,12 @@
     .selected-title-wrapper{
         position: relative;
     }
+    #share-boundary-publicly-wrapper{
+        padding-top: 12px;
+    }
+    #share-boundary-publicly-wrapper input{
+        transform: scale(2);
+    }
     .view-boundary-link{
         right: 8px;
         position: absolute;
@@ -198,7 +204,12 @@
         <i class="fa fa-circle-check"></i>
         <div class="message">File upload successful</div>
     </div>
-
+    <div id="share-boundary-publicly-wrapper">
+        <input type="checkbox" id="share-boundary-publicly"
+               onchange="enableContinueButton()"
+               {% if community.share_boundary_publicly %}checked{% endif %}>
+        <label for="share-boundary-publicly">Share Boundary Publicly</label>
+    </div>
     <div class="save-cancel-container w-90 flex-this flex-start">
         <div>
             <a
@@ -216,7 +227,7 @@
     </div>
 </span>
 <script>
-    let BoundaryPayLoad = null
+    let BoundaryPayLoad = {}
 
     fetch('https://native-land.ca/wp-json/nativeland/v1/map-list').then(resp => resp.json()).then(response => {
 
@@ -277,7 +288,6 @@
         document.querySelector('#community-boundary-continue-btn').classList.add('disabled-btn')
         disableCancelButton()
     }
-
     function showSpinner(){
         document.querySelector('.save-cancel-container .spinner').classList.add('shown')
     }
@@ -431,7 +441,7 @@
 
         successMessage.classList.toggle('invisible')
         // show and label ui elements
-        self.closest('.boundary-selection-unit').querySelector('.selected-title').innerText = geoJsonData.fileName
+        self.closest('.boundary-selection-unit').querySelector('.selected-title').innerText = geoJsonData.fileName || 'Uploaded Shapefile'
         self.closest('.boundary-selection-unit').querySelector('.selected-location').classList.remove('invisible')
         enableContinueButton()
 
@@ -449,9 +459,10 @@
     }
 
     async function setBoundary(self) {
-
         // do post call to set boundary in request
         showSpinner()
+        BoundaryPayLoad.share_boundary_publicly = document.getElementById("share-boundary-publicly").checked
+
         const response = await fetch("{% url 'update-community-boundary-data' community.id %}", {
             method: 'POST',
             body: JSON.stringify(BoundaryPayLoad),
