feat: fixed issue in which boundary was not hidden on registry page

--- a/templates/public.html
+++ b/templates/public.html
@@ -107,7 +107,7 @@
 
         </div>
 
-        {% if community.boundary.coordinates %}
+        {% if community.share_boundary_publicly and community.boundary.coordinates %}
         <div>
             <h3>Community Location</h3>
             <iframe src="{% url 'community-boundary-view' community.id %}" data-testid="community-boundary-iframe"
